Quelques corrections d'unité et de z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ header{
 .burgerContainer{
     z-index: 0;
     width: 80px;
+    height:70px;
     flex-direction: column;
     flex-wrap: nowrap;
     align-content: center;
@@ -119,8 +120,8 @@ header{
 
 /* Style de la barre de navigation */
 .mainNav{
-    z-index: 0;
-    width: 22rem;
+    z-index: 10;
+    width: 22vw;
     min-width: 22rem;
     position: relative;
     display: flex;
@@ -137,14 +138,14 @@ header{
 }
 
 .navigationMenu{
-    z-index: 1;
+    z-index: 20;
     position:relative;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     list-style-type: none;
     max-width:100%;
-    width:20rem;
+    width:20vw;
     max-height: 100%;
     top: 200px;
     left: 0;
@@ -152,7 +153,7 @@ header{
 }
 
 .navigationMenuLink{
-    z-index: 2;
+    z-index: 30;
     max-width:100%;
     width:100%;
     border-bottom: solid 1px #fff;
@@ -168,7 +169,7 @@ header{
     cursor:pointer;
 }
 .closerBtn{
-    z-index: 5;
+    z-index: 4;
     position:absolute;
     top: 1rem;
     left: 15vw;
@@ -230,6 +231,7 @@ header{
 /* **************************** Sidebar **************************** */
 
 aside{
+    z-index:0;
     display:flex;
     flex-direction:column;
     max-width:20vw;
